--- a/src/app/pages/person/person-form/person-form.component.html
+++ b/src/app/pages/person/person-form/person-form.component.html
@@ -79,6 +79,7 @@
               class="form-control"
               id="birthDate"
               formControlName="birthDate"
+              [max]="maxBirthDate()"
             />
             <app-form-field-error
               [form-control]="resourceForm?.get('birthDate')"
