--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,10 @@
 @import "~@ng-select/ng-select/themes/default.theme.css";
 
+input[type="date"]::-webkit-inner-spin-button {
+  display: none;
+  -webkit-appearance: none;
+}
+
 .icon-pesquisar,
 .input-pesquisar {
   color: #000 !important;
@@ -16,14 +21,12 @@
 .procurar-css {
   padding: 12px !important;
   background-color: rgba($color: #3f51b5, $alpha: 0.8);
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
-    rgba(0, 0, 0, 0.22) 0px 10px 10px !important;
 }
 
 .tableskindiv {
   padding: 20px;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
-    rgba(0, 0, 0, 0.22) 0px 10px 10px;
+  box-shadow: 0px 5px 8px 0px rgb(0 0 0 / 15%);
+  border-radius: 8px;
 }
 
 .tableskin {
