--- a/src/app/pages/expense-control/expense-control-list/expense-control-list.component.html
+++ b/src/app/pages/expense-control/expense-control-list/expense-control-list.component.html
@@ -3,7 +3,7 @@
 
   <app-page-header
     page-title="Expense Control"
-    button-text="New Expense Control"
+    button-text="New"
     [button-fa]="['fas', 'plus']"
     button-link="new"
     button-class="btn-success"
@@ -32,7 +32,7 @@
           <th>Description</th>
           <th>Expense Date</th>
           <th>Value</th>
-          <th></th>
+          <th class="actions">Actions</th>
         </tr>
       </thead>
       <tbody>
