--- a/src/app/pages/person/person-list/person-list.component.html
+++ b/src/app/pages/person/person-list/person-list.component.html
@@ -3,7 +3,7 @@
 
   <app-page-header
     page-title="Persons"
-    button-text="New Person"
+    button-text="New"
     [button-fa]="['fas', 'plus']"
     button-link="new"
     button-class="btn-success"
