--- a/src/app/pages/person/person-form/person-form.component.scss
+++ b/src/app/pages/person/person-form/person-form.component.scss
@@ -2,8 +2,7 @@
   margin: 20px 0px;
   padding: 20px;
   min-height: 72vh;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
-    rgba(0, 0, 0, 0.22) 0px 10px 10px;
+  box-shadow: 0px 5px 8px 0px rgb(0 0 0 / 15%);
   position: relative;
   -webkit-print-color-adjust: exact;
 }
