added expense report pdf

--- a/src/app/pages/expense-control/expense-control-list/expense-control-list.component.html
+++ b/src/app/pages/expense-control/expense-control-list/expense-control-list.component.html
@@ -25,6 +25,14 @@
     />
   </div>
   <div class="container-fluid tableskindiv">
+    <div class="actions actions-header">
+      <button
+        (click)="downloadReportPdf()"
+        class="btn btn-danger btn-sm botoes"
+      >
+        <fa-icon [icon]="['fas', 'file-pdf']"></fa-icon> PDF
+      </button>
+    </div>
     <table class="tableskin">
       <thead>
         <tr class="bg-primary text-light">
