added person filter

--- a/src/app/pages/person/person-list/person-list.component.scss
+++ b/src/app/pages/person/person-list/person-list.component.scss
@@ -7,6 +7,12 @@
   -webkit-print-color-adjust: exact;
 }
 
+.button-search {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .actions {
   text-align: end;
 }
