--- a/src/app/layout/rodape/rodape.component.html
+++ b/src/app/layout/rodape/rodape.component.html
@@ -1,3 +1,17 @@
 <div class="footer">
-  <h1 class="titulo">SEU RODAPÉ</h1>
+  <div class="centralizar">
+    <p class="titulo">Base Project - Versão 1.0</p>
+  </div>
+  <div class="centralizar">
+    <p class="autor">Auto: Joshua Maia Rodrigues</p>
+    <p class="autor">
+      <a href="https://www.linkedin.com/in/joshua-maia-rodrigues-662634110/"
+        ><fa-icon [icon]="['fab', 'linkedin']"></fa-icon
+      ></a>
+      -
+      <a href="https://github.com/joshuamaia"
+        ><fa-icon [icon]="['fab', 'github']"></fa-icon
+      ></a>
+    </p>
+  </div>
 </div>
