--- a/src/app/pages/home/home-initial/home-initial.component.html
+++ b/src/app/pages/home/home-initial/home-initial.component.html
@@ -1,3 +1,28 @@
 <div class="home">
-  <h1>Aqui você vai por o conteúdo de sua HOME!!!!</h1>
+  <h1 style="text-align: center">O que já temos no projeto</h1>
+  <ul class="list-group">
+    <li class="list-group-item">Arquitetura candidata back e front</li>
+    <li class="list-group-item">Testes básicos no back</li>
+    <li class="list-group-item">CRUD de Pessoas</li>
+    <li class="list-group-item">CRUD de Despesas</li>
+    <li class="list-group-item">
+      Listagem com paginação de verdade, só trás a quantidade definida por
+      página
+    </li>
+    <li class="list-group-item">Validações no front na tela de formulário</li>
+    <li class="list-group-item">
+      Menu Responsivo com home, pessoas e controle de gastos, para exemplificar
+      a navegação
+    </li>
+    <li class="list-group-item">Geração de relatório em CSV</li>
+    <li class="list-group-item">
+      Geração de relatório em PDF cujo pdf foi construído com o Jasper Studio e
+      o back está configurado para funcionar com o mesmo
+    </li>
+    <li class="list-group-item">CRUD de gastos e receitas das pessoas</li>
+    <li class="list-group-item">
+      Chart dos gastos/receitas por pessoa (Foi usado highcharts)
+    </li>
+    <li class="list-group-item">Swagger 3</li>
+  </ul>
 </div>
