added kpi component

--- a/src/app/layout/menu/menu.component.html
+++ b/src/app/layout/menu/menu.component.html
@@ -44,7 +44,7 @@
                 class="nav-link active"
                 aria-current="page"
                 routerLink="/expense-control/chart"
-                >Chart</a
+                >Dashboard</a
               >
             </li>
           </ul>
