--- a/src/app/pages/home/home-initial/home-initial.component.html
+++ b/src/app/pages/home/home-initial/home-initial.component.html
@@ -27,7 +27,7 @@
     <li class="list-group-item">Flyway</li>
     <li class="list-group-item">Health check</li>
     <li class="list-group-item">
-      Chart dos gastos/receitas por pessoa (Foi usado highcharts)
+      KPI e Chart dos gastos/receitas por pessoa (Foi usado highcharts)
     </li>
     <li class="list-group-item">Docker e Docker Compose</li>
   </ul>
